Simplified various calls Eliminated extra classes